--- a/warmup.html
+++ b/warmup.html
@@ -26,7 +26,11 @@
     <dt>Puppies</dt>
     <dd>Baby dogs are pretty adorable</dd>
     <dt>Kitties</dt>
-    <dd>Baby cats are even cuter than puppies! (It's the ears)</dd>    
+    <dd>Baby cats are even cuter than puppies! (It's the ears)</dd> 
+    <dt> Hamsters</dt>
+    <dd> When hamsters eat, their little mouths are the cutest thing ever. </dd>
+    <dt> This Panda</dt>
+    <dd><img src="http://bit.ly/1MadBtw" alt="a panda"> </dd>   
   </dl>
   
 </body>
